examples/passing/ModuleExportSelf/A.purs
module A (module A, module Prelude) where

import Prelude

type Foo = Boolean
